ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: "washbin-test"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: washbin-service
            port:
              number: 80
